--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -8,7 +8,7 @@
     <title><%= lingua.user.users%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
-    <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
+    <!-- <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css"> -->
     <link rel="stylesheet" href="../vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" href="../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
@@ -78,14 +78,14 @@
                                                             <td>
                                                                 <a class="btn-link" href="/customers/<%- user.id%>">
                                                                     <%- user.personalInfo.firstName + ' ' + user.personalInfo.lastName %>
-                                                                    <% if(!user.hasAllInformation) {%>
+                                                                    <!-- <%# if(!user.hasAllInformation) { %>
                                                                     <i class="mdi mdi-alert text-warning"
                                                                         style="padding-left: 10px;"></i>
-                                                                    <%}%>
-                                                                                </a>
-                                                                            </td>
-                                                                            <td>
-                                                                                <%- user.role%>
+                                                                    <%# } %> -->
+                                                                </a>
+                                                            </td>
+                                                            <td>
+                                                                <%- user.role%>
                                                             </td>
                                                             <td>
                                                                 <%- user.email%>
@@ -140,7 +140,7 @@
     <!-- Plugin js for this page -->
     <script src="../vendors/chart.js/Chart.min.js"></script>
     <script src="../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
-    <script src="../vendors/progressbar.js/progressbar.min.js"></script>
+    <!-- <script src="../vendors/progressbar.js/progressbar.min.js"></script> -->
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
@@ -149,14 +149,14 @@
     <script src="../js/off-canvas.js"></script>
     <script src="../js/hoverable-collapse.js"></script>
     <script src="../js/template.js"></script>
-    <script src="../js/settings.js"></script>
-    <script src="../js/todolist.js"></script>
+    <!-- <script src="../js/settings.js"></script> -->
+    <!-- <script src="../js/todolist.js"></script> -->
     <!-- endinject -->
     <!-- Custom js for this page-->
 
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/Chart.roundedBarCharts.js"></script>
+    <!-- <script src="../js/Chart.roundedBarCharts.js"></script> -->
 
     <!-- End custom js for this page-->
     <script src="../js/helper-functions.js"></script>
