--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -133,7 +133,7 @@
     <!-- endinject -->
     <!-- Custom js for this page-->
 
-    <script type="text/javascript" src="../js/account.js"></script>
+    <!-- <script type="text/javascript" src="../js/account.js"></script> -->
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
