--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -128,15 +128,15 @@
     <script src="../js/off-canvas.js"></script>
     <script src="../js/hoverable-collapse.js"></script>
     <script src="../js/template.js"></script>
-    <script src="../js/settings.js"></script>
-    <script src="../js/todolist.js"></script>
+    <!-- <script src="../js/settings.js"></script> -->
+    <!-- <script src="../js/todolist.js"></script> -->
     <!-- endinject -->
     <!-- Custom js for this page-->
 
     <!-- <script type="text/javascript" src="../js/account.js"></script> -->
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/Chart.roundedBarCharts.js"></script>
+    <!-- <script src="../js/Chart.roundedBarCharts.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
     <!-- End custom js for this page-->
