--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -180,6 +180,7 @@
 
 <script>
     window.onload = function () {
+        $('[data-toggle="tooltip"]').tooltip();   
         //YOUR JQUERY CODE
         manageLangDropdown();
 
