--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -223,6 +223,7 @@
     <script src="../js/template.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <!-- End custom js for this page-->
+    <script src="../js/helper-functions.js"></script>
 
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
