Add subscription ID visible.

--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -138,6 +138,8 @@
                         <% } %>
                     </ul>
                     <br>
+                    
+                    <small><b>ID: <%= stripeSubscription.id%></b></small>
                     <% } %>
                 </td>
                 <td>
