Add link to Home/Pricing List on navbar. Show and attach old prices to current prices.

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -70,6 +70,11 @@
                     </a>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/home" aria-expanded="false" title="Home">
+                    <i class="fa-solid fa-list text-primary"></i>
+                </a>
+            </li>
             <% if(user.billingID) { %>
             <li class="nav-item">
                 <a class="nav-link" href="/create-subscriptions" aria-expanded="false" title="Add Membership">
