--- a/views/cars/create.ejs
+++ b/views/cars/create.ejs
@@ -74,7 +74,7 @@
                                                         </div>
                                                     </div>
                                                     <% } %>
-                                                    <%- include('./formFields.ejs', {allMakes, car: null}); %>
+                                                    <%- include('./formFields.ejs', {allMakes, car: null, userCars}); %>
                                                 </div>
                                                 <div class="row">
                                                     <div class="mt-3">
@@ -123,7 +123,7 @@
 
     <!-- endinject -->
     <!-- Custom js for this page-->
-
+    <script src="../js/helper-functions.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
     <script src="../vendors/select2/select2.min.js"></script>
@@ -159,10 +159,6 @@
                 // return false
             })
         });
-
-        var showResult = function (updateDiv, result) {
-            $(updateDiv).html(result);
-        }
     </script>
 </body>
 
