Fix notifications dropdown overflow.

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -94,7 +94,7 @@
                     <% } %>
 
                 </a>
-                <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0 notifications-dropdown"
+                <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0 vh-50 overflow-auto notifications-dropdown"
                     aria-labelledby="notificationDropdown" onclick="">
                     <a class="dropdown-item py-3 border-bottom">
                         <p class="mb-0 font-weight-medium float-left">
