--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -54,13 +54,14 @@
                                                         <% } %></h4>
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-start">
-                                                    <a href="/changePassword/<%- customer.id%>?url=/customers"
+                                                    <a href="/changePassword/<%- customer.id%>?url=/editCustomers&userType=<%- userType%>"
                                                         type="button" class="btn btn-primary btn-icon-text m-1">
                                                         <i class="fa-solid fa-key"></i>
                                                         <%= lingua.user.password.changePassword%>
                                                     </a>
-                                                    <a href="/edit-user/<%- customer.id%>?url=/customers" data-id="user"
-                                                        type="button" class="btn btn-primary btn-icon-text m-1">
+                                                    <a href="/edit-user/<%- customer.id%>?url=/editCustomers&userType=<%- userType%>"
+                                                        data-id="user" type="button"
+                                                        class="btn btn-primary btn-icon-text m-1">
                                                         <i class="fa-solid fa-user-pen"></i>
                                                         <%= lingua.user.editPersonalInfo%>
                                                     </a>
